# mapetor

./: .appveyor.yml  .gitignore  .lgtm.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  bootstrap.bat
cmake/: FindBoost.cmake  deprecated_FindBoost.cmake
doc/: CMakeLists.txt  Doxyfile.in  NOTES.md  uml.graphml
include/: CMakeLists.txt  main_app.h  version.h
include/gui/: C_wxDlgInfo.h  C_wxMainFrame.h  wxIconBundleResLoader.h
include/helpers/: helpers.h
include/prjprops/: prjprops.h
locales/: CMakeLists.txt  TMGR_CardCreator.pot  de_DE.po  readme.txt
res/: CHANGELOG.html  map_1.mscript  prjbatch.bat  resource.rc
res/common/: a6Karte.mrules
src/: CMakeLists.txt  main_app.cpp
src/gui/: CMakeLists.txt  C_wxDlgInfo.cpp  C_wxMainFrame.cpp  wxIconBundleResLoader.cpp
src/helpers/: CMakeLists.txt  helpers.cpp
src/prjprops/: CMakeLists.txt  prjprops.cpp
test/: CMakeLists.txt  test_helpers.cpp  test_propval.cpp
tools/: __environment.bat  build_boost.bat  build_wxwidgets.bat
wxfb/: C_wxInfoDialog.cpp  C_wxInfoDialog.h  C_wxfbMainFrame.cpp  C_wxfbMainFrame.h  wxfb_info_dialog.fbp  wxfb_main_frame.fbp
